--- a/docs/dokumentation.tex
+++ b/docs/dokumentation.tex
@@ -60,7 +60,36 @@
 \chapter{TRUE und FALSE}
 \include{ch1_truefalse}
 
+\chapter{ELSE und ELSEIF}
+\include{ch2_else&elseIf}
+
+\chapter{Boolesche Arithmetik}
+\include{ch3_boolArithmetik}
+
 \chapter{Klasse Boolean}
-\include{ch2_boolean}
+\include{ch4_boolean}
+
+\chapter{ Mehrere eigene Klassen}
+\include{ch5_classes}
+
+\chapter{Parameter f"ur Methoden}
+\include{ch6_parameters}
+
+\chapter{Ergebnisse f"ur Methoden}
+\include{ch7_return}
+
+\chapter{Ausnahmebehandlung}
+\include{ch8_try}
+
+\chapter{Vererbung}
+\include{ch9_vererbung}
+
+\chapter{Speicherbereinigung}
+\include{ch10_gc}
+
+\chapter{Bonus Aufgaben}
+
+\chapter{Anhang}
+\include{anhang}
 
 \end{document}
