ch3 angefangen und ch1 modifiziert

--- a/docs/ch1_truefalse.tex
+++ b/docs/ch1_truefalse.tex
@@ -1,6 +1,5 @@
 \section{Einführung}
-In diesem Kapitel führen wir die Begriffe \verb|TRUE| und \verb|FALSE| ein.
-Da noch keine Boolschen Ausdrücke Exisitieren, entsprechen die dann 1 und 0.\\
+In diesem Kapitel führen wir die Begriffe \verb|TRUE| und \verb|FALSE| als erste boolsche Werte ein.\\
 
 \section{Lexikalische Analyse}
 Damit die Symbole  \verb|TRUE| und \verb|FALSE|  eingelesen werden können müssen sie zuerst in  \verb|Symbol.java| definiert werden.
